<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/main_connectAsTextViewId"
            style="@style/ButtonLargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_connectAsLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonMaster"
            style="@style/ButtonLargeText"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/orange_menu_btn"
            android:onClick="connectAsMaster"
            android:text="@string/main_connectMaster" />

        <Button
            android:id="@+id/buttonPeer"
            style="@style/ButtonLargeText"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/orange_menu_btn"
            android:onClick="connectAsPeer"
            android:text="@string/main_connectPeer" />
    </LinearLayout>

    
</LinearLayout>